--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-    "name": "2raywall/socialrocket",
-    "description": "Conect to Social Rocket Api,",
+    "name": "2raywall/socialrocketapi",
+    "description": "Conect to Social Rocket Api.",
     "license": "MIT",
     "keywords": ["2raywall","social","rocket","api"],
     "authors": [
         {
-            "name": "2raywall Inc",
-            "email": "admin@2raywall.com",
+            "name": "2raywall Solutions Inc.",
+            "email": "team@2raywall.com",
             "homepage": "http://2raywall.com"
         }
     ],
     "require": {},
     "require-dev": {
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "5.3.*"
     },
     "autoload": {
         "psr-4": {
