--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "2raywall/socialrocketapi",
-    "description": "Conect to Social Rocket Api.",
+    "description": "Connect to Social Rocket Api.",
     "license": "MIT",
     "keywords": ["2raywall","social","rocket","api"],
     "authors": [
